Bug 788729: Check rv of nsDirectoryService::Create, to fix GCC build warning. r=bsmedberg